docs/versioned_docs/version-0.3.x/getting-started/usage.mdx
---
sidebar_position: 3
---

# Usage

```
Universal Text Pre-Processor ('utpp') is a tool for preprocessing any file

Usage: utpp [options] <files> [variables]

Options:
      --help         Show help                                         [boolean]
      --version      Show version number                               [boolean]
  -o, --output       write to output file                               [string]
  -c, --check        checks the file's syntax only    [boolean] [default: false]
  -v, --verbose      show more debug logs             [boolean] [default: false]
  -p, --print        prints the output to stdout instead of files      [boolean]
  -q, --quiet        makes the preprocessor quiet     [boolean] [default: false]
      --ignore       glob pattern to ignore files         [string] [default: ""]
      --no-eval      disables eval function                            [boolean]
      --no-files     disables inclusion from files                     [boolean]
      --no-urls      disables inclusion from urls                      [boolean]
      --no-env       disables inclusion of environment variables       [boolean]
      --no-template  disables template replacement                     [boolean]
      --no-vars      disables variables replacement                    [boolean]

Examples:
  utpp -o out.txt input.txt  runs the preprocessor on input.txt and write output
                             to out.txt
  utpp input.txt foo=bar     runs the preprocessor on input.txt and sets
                             variable foo to bar
  utpp -c input.txt          validates the syntax of input.txt file

for more info and support visit https://github.com/adrianschubek/utpp
```

:::tip
You can use any glob pattern as *files* argument to select multiple files.
For example `utpp "*/**" foo=bar` will run the preprocessor on all files in the current directory and all subdirectories and set the variable `foo` to `bar`.
Or `utpp "foo.txt;bar.tex;baz.html"` will run the preprocessor on `foo.txt`, `bar.tex` and `baz.html`.
:::

:::info
Show this help page by running `utpp`.
:::
